@@ -18,6 +18,7 @@
 	- Don't allow page > 100 or sorting on username or title on tag link browser
 	- Added users_prefs table and removed the following columns from users:
 	  skin, customcss, show_nsfw, show_list, notify_announce, notify_dbedit
+	- Store l10n preference in the database for logged-in users
 
 2.15 - 2010-12-15
 	- Removed expand/collapse from history browser and /u+/posts and switched to
